--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "cb1a7ad7",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "07da0f7f",
    "metadata": {},
    "outputs": [
@@ -998,7 +998,7 @@
        "[100000 rows x 54 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "e16dbea0",
    "metadata": {},
    "outputs": [
@@ -1091,10 +1091,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "dcf34a5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    0.333333\n",
+       "1    0.333333\n",
+       "0    0.333333\n",
+       "Name: Credit_Score, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X, y = df.drop(\"Credit_Score\",axis=1).values , df[\"Credit_Score\"] \n",
     "rus = SMOTE(sampling_strategy='auto')\n",
@@ -1104,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "52d8780a",
    "metadata": {},
    "outputs": [],
@@ -1119,12 +1133,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4eda4f3d",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Hyperparameter tuning for SGD Classifier:\n",
+      "Best hyperparameters: {'alpha': 0.0001, 'eta0': 0.1, 'learning_rate': 'invscaling', 'max_iter': 1000}\n",
+      "Training Score: 0.64\n",
+      "Test Accuracy: 0.63495\n",
+      "Mean Cross-Validation Score: 0.20068000000000003\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['sgd_classifier_model.pkl']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# SGD Classifier\n",
     "sgd_classifier = SGDClassifier(random_state=42)\n",
@@ -1158,15 +1195,119 @@
     "# Mean cross-validation score\n",
     "cross_val_scores_sgd = cross_val_score(best_model_sgd, X, y, cv=5)\n",
     "mean_cv_score_sgd = cross_val_scores_sgd.mean()\n",
-    "print(f\"Mean Cross-Validation Score: {mean_cv_score_sgd}\")"
+    "print(f\"Mean Cross-Validation Score: {mean_cv_score_sgd}\")\n",
+    "\n",
+    "joblib.dump(best_model_sgd, 'sgd_classifier_model.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "839a24f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Hyperparameter tuning for K-Nearest Neighbors:\n",
+      "Best hyperparameters: {'algorithm': 'auto', 'leaf_size': 10, 'n_neighbors': 7, 'p': 1, 'weights': 'distance'}\n",
+      "Training Score: 1.0\n",
+      "Test Accuracy: 0.76195\n",
+      "Mean Cross-Validation Score: 0.52657\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Naradon\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py:378: FitFailedWarning: \n",
+      "80 fits failed out of a total of 320.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "80 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Naradon\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 686, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"C:\\Users\\Naradon\\anaconda3\\Lib\\site-packages\\sklearn\\svm\\_classes.py\", line 274, in fit\n",
+      "    self.coef_, self.intercept_, n_iter_ = _fit_liblinear(\n",
+      "                                           ^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Naradon\\anaconda3\\Lib\\site-packages\\sklearn\\svm\\_base.py\", line 1223, in _fit_liblinear\n",
+      "    solver_type = _get_liblinear_solver_type(multi_class, penalty, loss, dual)\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Naradon\\anaconda3\\Lib\\site-packages\\sklearn\\svm\\_base.py\", line 1062, in _get_liblinear_solver_type\n",
+      "    raise ValueError(\n",
+      "ValueError: Unsupported set of arguments: The combination of penalty='l1' and loss='squared_hinge' are not supported when dual=True, Parameters: penalty='l1', loss='squared_hinge', dual=True\n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "C:\\Users\\Naradon\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:952: UserWarning: One or more of the test scores are non-finite: [      nan 0.63415         nan 0.63415         nan 0.63415         nan\n",
+      " 0.63415   0.6341875 0.63415   0.6341875 0.63415   0.6341875 0.63415\n",
+      " 0.6341875 0.63415         nan 0.6341375       nan 0.6341375       nan\n",
+      " 0.6341375       nan 0.634125  0.6341375 0.63415   0.6341375 0.63415\n",
+      " 0.6341375 0.63415   0.6341375 0.63415         nan 0.5976375       nan\n",
+      " 0.6275375       nan 0.6329875       nan 0.63335   0.63415   0.63415\n",
+      " 0.63415   0.63415   0.63415   0.63415   0.63415   0.63415         nan\n",
+      " 0.54945         nan 0.5317875       nan 0.5535125       nan 0.5668875\n",
+      " 0.63415   0.63415   0.63415   0.63415   0.63415   0.63415   0.63415\n",
+      " 0.63415  ]\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Hyperparameter tuning for Linear SVC:\n",
+      "Best hyperparameters: {'C': 0.1, 'dual': False, 'max_iter': 1000, 'penalty': 'l1'}\n",
+      "Training Score: 0.6345\n",
+      "Test Accuracy: 0.62935\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Naradon\\anaconda3\\Lib\\site-packages\\sklearn\\svm\\_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\Naradon\\anaconda3\\Lib\\site-packages\\sklearn\\svm\\_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\Naradon\\anaconda3\\Lib\\site-packages\\sklearn\\svm\\_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\Naradon\\anaconda3\\Lib\\site-packages\\sklearn\\svm\\_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Cross-Validation Score: 0.6315999999999999\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Naradon\\anaconda3\\Lib\\site-packages\\sklearn\\svm\\_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['linear_svc_model.pkl']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "kneighbors_classifier = KNeighborsClassifier()\n",
     "\n",
@@ -1178,7 +1319,7 @@
     "kneighbors_param_grid = {\n",
     "    'n_neighbors': [7, 9, 11, 13, 15],  # Fine-tune 'n_neighbors'\n",
     "    'weights': ['uniform', 'distance'],\n",
-    "    'algorithm': ['auto', 'ball_tree', 'kd_tree', 'brute'],\n",
+    "    'algorithm': ['auto'],\n",
     "    'p': [1, 2],\n",
     "    'leaf_size': [10, 20, 30]\n",
     "}\n",
@@ -1204,7 +1345,45 @@
     "# Mean cross-validation score\n",
     "cross_val_scores_kneighbors = cross_val_score(best_model_kneighbors, X, y, cv=5)\n",
     "mean_cv_score_kneighbors = cross_val_scores_kneighbors.mean()\n",
-    "print(f\"Mean Cross-Validation Score: {mean_cv_score_kneighbors}\")"
+    "print(f\"Mean Cross-Validation Score: {mean_cv_score_kneighbors}\")\n",
+    "\n",
+    "joblib.dump(best_model_kneighbors, 'kneighbors_classifier_model.pkl')\n",
+    "\n",
+    "\n",
+    "linear_svc_classifier = LinearSVC(random_state=42)\n",
+    "\n",
+    "# Hyperparameter tuning\n",
+    "linear_svc_param_grid = {\n",
+    "    'C': [0.1, 1, 10, 100],\n",
+    "    'max_iter': [1000, 2000, 3000, 4000],\n",
+    "    'penalty': ['l1', 'l2'],\n",
+    "    'dual': [True, False]\n",
+    "}\n",
+    "\n",
+    "\n",
+    "grid_search_linear_svc = GridSearchCV(linear_svc_classifier, linear_svc_param_grid, cv=5, scoring='accuracy', n_jobs=-1)\n",
+    "grid_search_linear_svc.fit(X_train, y_train)\n",
+    "\n",
+    "# Print results\n",
+    "print(\"\\nHyperparameter tuning for Linear SVC:\")\n",
+    "print(f\"Best hyperparameters: {grid_search_linear_svc.best_params_}\")\n",
+    "best_model_linear_svc = grid_search_linear_svc.best_estimator_\n",
+    "\n",
+    "# Training score\n",
+    "training_score_linear_svc = best_model_linear_svc.score(X_train, y_train)\n",
+    "print(f\"Training Score: {training_score_linear_svc}\")\n",
+    "\n",
+    "# Test score\n",
+    "y_pred_linear_svc = best_model_linear_svc.predict(X_test)\n",
+    "test_score_linear_svc = accuracy_score(y_test, y_pred_linear_svc)\n",
+    "print(f\"Test Accuracy: {test_score_linear_svc}\")\n",
+    "\n",
+    "# Mean cross-validation score\n",
+    "cross_val_scores_linear_svc = cross_val_score(best_model_linear_svc, X, y, cv=5)\n",
+    "mean_cv_score_linear_svc = cross_val_scores_linear_svc.mean()\n",
+    "print(f\"Mean Cross-Validation Score: {mean_cv_score_linear_svc}\")\n",
+    "\n",
+    "joblib.dump(best_model_linear_svc, 'linear_svc_model.pkl')\n"
    ]
   },
   {
@@ -1297,7 +1476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b185ffce",
+   "id": "aa3e2c30",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1319,7 +1498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
