clean the files

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "cb1a7ad7",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "07da0f7f",
    "metadata": {},
    "outputs": [
@@ -967,7 +967,7 @@
        "[97224 rows x 50 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e16dbea0",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1056,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
+   "id": "7bd2f1f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    0.532009\n",
+       "0    0.290103\n",
+       "2    0.177888\n",
+       "Name: Credit_Score, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Credit_Score\"].value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "dcf34a5b",
    "metadata": {},
    "outputs": [
@@ -1069,7 +1093,7 @@
        "Name: Credit_Score, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,12 +1163,14 @@
     "#     'max_iter': [1000, 2000, 3000, 4000],  # Increase the max_iter values\n",
     "#     'eta0': [0.01, 0.1, 0.5]\n",
     "# }\n",
+    "\n",
     "sgd_param_grid = {\n",
     "    'alpha': [0.0001],\n",
     "    'learning_rate': ['invscaling'],\n",
-    "    'max_iter': [1000],  # Increase the max_iter values\n",
+    "    'max_iter': [1000],  \n",
     "    'eta0': [0.1]\n",
     "}\n",
+    "\n",
     "\n",
     "grid_search_sgd = GridSearchCV(sgd_classifier, sgd_param_grid, cv=5, scoring='accuracy', n_jobs=-1)\n",
     "grid_search_sgd.fit(X_train, y_train)\n",
@@ -1301,9 +1327,12 @@
    "source": [
     "# Best hyperparameters: {'C': 0.1, 'dual': False, 'max_iter': 1000, 'penalty': 'l1'}\n",
     "\n",
-    "LinearSVC_Model = LinearSVC(C=0.1, dual=False, max_iter = 10000, penalty = 'l1')\n",
-    "LinearSVC_Model.fit(X_train, y_train)\n",
+    "LinearSVC_Model = LinearSVC(\n",
+    "    C=0.1, dual=False, max_iter = 10000, penalty = 'l1')\n",
     "\n",
+    "\n",
+    "\n",
+    "LinearSVC_Model.fit(X_train, y_train)\n",
     "y_train_pred = LinearSVC_Model.predict(X_train)\n",
     "\n",
     "train_accuracy = accuracy_score(y_train, y_train_pred)\n",
