--- a/testing.ipynb
+++ b/testing.ipynb
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "d4fbe7cd",
    "metadata": {},
    "outputs": [
@@ -1033,85 +1033,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "194a449a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2 = pd.read_csv(\"train.csv\", low_memory=False)\n",
-    "df2['Month'].value_counts()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1eea3d8c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.sort_values(by='Num_Credit_Inquiries', ascending=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a25aee0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df3 = pd.read_csv(\"test.csv\", low_memory=False)\n",
-    "df3['Month'].value_counts()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "da1ae6c7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ca72ae1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.sort_values(by='Monthly_Balance', ascending=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96a34dff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "count_negative_delayed_payments = (df['Num_of_Delayed_Payment'] < 0).sum()\n",
-    "\n",
-    "print(\"Number of delayed payments with values less than 0:\", count_negative_delayed_payments)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "749c5599",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['Monthly_Balance']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "17cc3d5c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Type_of_Loan'].value_counts()\n"
+    "first_rows = df.loc[df['Credit_Score'] == 0].head(2)\n",
+    "\n",
+    "last_row = df.loc[df['Credit_Score'] == 1].tail(1)\n",
+    "result_df = pd.concat([first_rows, last_row])\n",
+    "result_df.to_csv('Credit_Score_0_and_1.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69cafa8f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
