not sure what I changed, but whatever

--- a/main.ipynb
+++ b/main.ipynb
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7bd2f1f9",
+   "id": "122c8230",
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1636,7 @@
     }
    ],
    "source": [
-    "joblib.dump(knn_model, 'knn_model.pkl')"
+    "# joblib.dump(knn_model, 'knn_model.pkl')"
    ]
   },
   {
