--- a/testing.ipynb
+++ b/testing.ipynb
@@ -1047,8 +1047,115 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "7638a20f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Num_Credit_Inquiries</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>36675</th>\n",
+       "      <td>2597.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18975</th>\n",
+       "      <td>2594.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56397</th>\n",
+       "      <td>2592.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4722</th>\n",
+       "      <td>2592.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86681</th>\n",
+       "      <td>2589.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90724</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90723</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90722</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90721</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19718</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>97224 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Num_Credit_Inquiries\n",
+       "36675                2597.0\n",
+       "18975                2594.0\n",
+       "56397                2592.0\n",
+       "4722                 2592.0\n",
+       "86681                2589.0\n",
+       "...                     ...\n",
+       "90724                   0.0\n",
+       "90723                   0.0\n",
+       "90722                   0.0\n",
+       "90721                   0.0\n",
+       "19718                   0.0\n",
+       "\n",
+       "[97224 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_df = df.sort_values(by='Num_Credit_Inquiries', ascending=False)\n",
+    "sorted_df[['Num_Credit_Inquiries']]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "69cafa8f",
+   "id": "8d78703f",
    "metadata": {},
    "outputs": [],
    "source": []
